@@ -24,6 +24,7 @@
   This is until Tk allows for scrollable menus
 * Amend default key_addhost from 'Control-plus' to 'Control-Shift-plus'
 * Add in a 'default' cluster tag, used when no tags provided on command line
+* Fix Alt-n pasting in a resolved hostname instead of the connection hostname 
 
 2009-03-26 Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.25-1
 
